--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Science Carnival Evaluation System</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="header">
         <div class="header-left">
@@ -20,21 +22,35 @@
 
     <div class="container">
         <!-- Role Gate -->
-        <div id="roleGate" class="card">
-            <h2 id="welcomeTitle">Welcome to Science Carnival 2025</h2>
-            <p id="welcomeBody" class="hint">Please select your role to continue.</p>
-            <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 12px; margin-top: 20px;">
-                <div id="adminRoleCard"
-                    style="cursor: pointer; text-align: center; background: var(--border); border: 1px solid var(--border); border-radius: 12px; padding: 20px;"
-                    onclick="document.getElementById('adminLoginCard').classList.remove('hidden'); document.getElementById('roleGate').classList.add('hidden');">
-                    <h3 style="margin-bottom: 8px;">Admin</h3>
-                    <p class="hint">Manage system</p>
+        <div id="roleGate" class="card" style="padding: 0; overflow: hidden; max-width: 1000px; margin: 0 auto;">
+            <div class="row" style="gap: 0;">
+                <!-- Carousel (Top on mobile, Right on desktop) -->
+                <div class="col-6" id="landingCarousel" style="position: relative; height: 500px; background: #000;">
+                    <div class="carousel-track"></div>
                 </div>
-                <div id="evalRoleCard"
-                    style="cursor: pointer; text-align: center; background: var(--border); border: 1px solid var(--border); border-radius: 12px; padding: 20px;"
-                    onclick="document.getElementById('evalLoginCard').classList.remove('hidden'); document.getElementById('roleGate').classList.add('hidden');">
-                    <h3 style="margin-bottom: 8px;">Evaluator</h3>
-                    <p class="hint">Evaluate projects</p>
+
+                <!-- Portal Access (Bottom on mobile, Left on desktop) -->
+                <div class="col-6" style="padding: 40px;">
+                    <h2 id="welcomeTitle">Welcome to Science Carnival 2025</h2>
+                    <p id="welcomeBody" class="hint">Please select your role to continue.</p>
+                    <div style="display: grid; grid-template-columns: 1fr; gap: 16px; margin-top: 30px;">
+                        <div id="adminRoleCard" class="role-card"
+                            onclick="document.getElementById('adminLoginCard').classList.remove('hidden'); document.getElementById('roleGate').classList.add('hidden');">
+                            <div class="role-icon">🛡️</div>
+                            <div>
+                                <h3>Admin</h3>
+                                <p class="hint">Manage system & results</p>
+                            </div>
+                        </div>
+                        <div id="evalRoleCard" class="role-card"
+                            onclick="document.getElementById('evalLoginCard').classList.remove('hidden'); document.getElementById('roleGate').classList.add('hidden');">
+                            <div class="role-icon">🔬</div>
+                            <div>
+                                <h3>Evaluator</h3>
+                                <p class="hint">Evaluate projects & scores</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -121,6 +137,8 @@
         <div id="modalContainer"></div>
     </div>
 
+    <script src="https://cdn.sheetjs.com/xlsx-0.20.1/package/dist/xlsx.full.min.js"></script>
     <script src="frontend.js"></script>
 </body>
+
 </html>
