addes new features

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
                 </div>
 
                 <!-- Portal Access (Bottom on mobile, Left on desktop) -->
-                <div class="col-6" style="padding: 40px;">
+                <div class="col-6 portal-access-wrap" style="padding: 40px;">
                     <h2 id="welcomeTitle">Welcome to Science Carnival 2025</h2>
                     <p id="welcomeBody" class="hint">Please select your role to continue.</p>
                     <div style="display: grid; grid-template-columns: 1fr; gap: 16px; margin-top: 30px;">
