add New feature in it

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 
     <div class="container">
         <!-- Role Gate -->
-        <div id="roleGate" class="card" style="padding: 0; overflow: hidden; max-width: 1000px; margin: 0 auto;">
+        <div id="roleGate" class="card hidden" style="padding: 0; overflow: hidden; max-width: 1000px; margin: 0 auto;">
             <div class="row" style="gap: 0;">
                 <!-- Carousel (Top on mobile, Right on desktop) -->
                 <div class="col-6" id="landingCarousel" style="position: relative; height: 500px; background: #000;">
