feat: Add initial Science Carnival evaluation portal UI and an evaluator finalization reset script.

--- a/public/index.html
+++ b/public/index.html
@@ -93,7 +93,7 @@
         <div id="evalApp" class="hidden">
             <!-- Welcome -->
             <div id="evalWelcome" class="card hidden">
-                <h2>Welcome, Evaluator!</h2>
+                <h2>Welcome to Amazon Think Big Science Carnival </h2>
                 <p class="hint">Please complete your profile before starting evaluations.</p>
                 <div class="toolbar" style="margin-top: 16px;">
                     <button class="btn" onclick="Eval.showProfileForm()">Continue to Profile</button>
